[package]
name = "gtk-blueprint"
description = "Use Blueprint in Rust GTK applications"
version = "0.2.0"
repository = "https://github.com/Megadash452/gtk-blueprint"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["gtk", "blueprint"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0.100"
# phf = { version = "0.11.1", default-features = false } # for compiled equivalent of hashmap
phf_codegen = "0.11.1"

